 * Fixed pos of new documents.
 * Added style to upload document fields table.
 * Right aligned document fields titles.

2006-10-18 cjg
 * Added action lists for all variations of eprint status and owner/editor
 * These are now used to generate quick-link buttons at the top and bottom
    of the view page.
 * All lists of actions with descriptions are now generated by a single 
    method.
 * Moved New EPrint to a screen of its own
 * Added a new actions list which is used on the top of the items page. 

2006-10-18 cjg
 * Named Sets now search correctly and have a correct help phrase.

2006-10-18 cjg
 * Deposit button on owner-view page now goes to deposit screen, not action.

2006-10-18 cjg
 * Indexing config now sets "index" to true (or else no indexing happens)
 * Moved $FOO style indexing constants to $c->{indexing}->{foo} style.

2006-10-18 cjg
 * Fixed undef error when an eprint tried to get the lowest pos of doc when
    there wasn't one at all.
 * Renamed indexqueue table to index_queue

2006-10-20 cjg
 * Added current user to the state available to epscript
 * Improved a debug message in epscript
 * Reworked citation methods to take parameters which are
    passed into epscript.
 * Cleaned up search rendering
 * Cleaned up items page
 * Search results now obey page_size
 * Added option to turn off ordering in multiple fields. It hides
    the numbers and arrows.
 * Added the option to editperms
 * Fixed a typo s/()/{}/ in Import::Endnote
 * Added a FlatSubjects import that can replace import_subjects 
 * Changed the default search results size to 20 as 100 was very slow.
 * Added some missing phrases
 * Screens now ignore "login" action (which sometimes get sent
    if someone hits back/reload after logging in)
 * Styled Pagination

2006-10-20 cjg
 * Renamed /perl/ to /cgi/
 * Improved rendering of details tab
 * Removed test script lookup_demo
 * Changed export text on search
 * Fixed typo in workflow/eprint/default.xml
