@@ -9,7 +9,7 @@
   <tr>
     <td style="padding-left: 0.5em"><epc:print expr="$n" />.</td>
     <td style="padding-left: 0.5em">
-      <epc:print expr="citation($item)" />
+      <epc:print expr="$item.citation('default')" />
       <epc:if test="full_text_status = 'none'"> Item not available online.</epc:if>
       <epc:if test="full_text_status = 'restricted'"> Item availablity restricted.</epc:if>
     </td>
